<resources>
    <string name="app_name" translatable="false">Menu Finder</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Prompt -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_restaurant_name">Restaurant name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_cif">CIF</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_city">City</string>
    <string name="prompt_postal_code">Postal code</string>
    <string name="prompt_state">State</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_restaurant_email">Restaurant email</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_distance">Distance in kilometers</string>

    <!-- Action -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register for free</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_manage_items">Manage Items</string>
    <string name="action_manage_menus">Manage Menus</string>
    <string name="action_manage_restaurants">Manage Restaurants</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_map">Map</string>
    <string name="action_view_restaurants">Restaurants</string>
    <string name="action_view_subscriptions">Subscriptions</string>
    <string name="action_sign_in_without_username">Sign in without username</string>

    <!-- Error -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_email_format">This email has a wrong format</string>
    <string name="error_phone_format">This phone has a wrong format</string>
    <string name="error_no_connection_server">No connection with server</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Delete -->
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Delete \"%s\"?</string>
    <string name="deleteNotification">\"%s\" deleted</string>
    <string name="general_information">General information</string>
    <string name="item_saved">Item saved</string>
    <string name="restaurant_deleted">Restaurant deleted</string>
    <string name="item_deleted">Item deleted</string>
    <string name="deleteConfirmationMenu">Delete \"%s\" from this menu?</string>

    <!-- Manage -->
    <string name="selected_restaurant">Selected %s</string>
    <string name="manage_item">Manage Item</string>
    <string name="manage_menu">Manage Menu</string>
    <string name="manage_restaurant">Manage Restaurant</string>
    <string name="register_restaurant">Register new restaurant</string>
    <string name="invalid_guest_action">Invalid action to guest user</string>


    <!-- Menu -->
    <string name="manage_menus">Manage %s Menus</string>
    <string name="manage_items">Manage %s Items</string>
    <string name="menu_saved">Menu saved</string>
    <string name="menu_deleted">Menu deleted</string>
    <string name="menu_finder_guest">Menu Finder Guest</string>
    <string name="menu_finder_com" translatable="false">menu@finder.com</string>
    <string name="menus">Menus</string>
    <string name="name">Name:\u0020</string>
    <string name="add_item">Add item</string>
    <string name="detail_menu_title" translatable="false">%s ( %s€ )</string>

    <!-- Notification -->
    <string name="price">Price:\u0020</string>
    <string name="save">Save</string>
    <string name="saveNotification">\"%s\" saved</string>
    <string name="updateNotification">\"%s\" updated</string>
    <string name="search">Search</string>
    <string name="shared_logo" translatable="false">logo</string>
    <string name="image_restaurant" translatable="false">image_restaurant</string>
    <string name="you_are_the_owner_of_a_restaurant">You are the owner of a restaurant?</string>
    <string name="view_on_map">View on Map</string>
    <string name="visible">Visible</string>
    <string name="review_added">Review added</string>
    <string name="review">Review</string>

    <!-- Social media -->
    <string name="share">Share</string>
    <string name="share_text">I ate very well at %s — I\'m using Menu Finder</string>

    <!-- Map -->
    <string name="marker_title">%s restaurant</string>
    <string name="no_location_detected">We cannot find your location!</string>
    <string name="showing_restaurants_distance_header">Showing restaurants at %dKm from you</string>

    <!-- Filter -->
    <string name="not_results_founds">Not results found</string>
    <string name="clear_filter">Clear filter</string>
    <string name="must_create_restaurant">You have to create a restaurant before</string>

    <!-- GPS -->
    <string name="gps_settings">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="action_important_information">Important Information</string>

    <string name="important_information_text">Hello &lt;b&gt;guest user&lt;/b&gt;, I recommend you to &lt;b&gt;register&lt;/b&gt; to our
        application. Are you question why? If you create your user you will &lt;b&gt;add restaurants as a
        favourite restaurants&lt;/b&gt;. It enable you to &lt;b&gt;receive notifications&lt;/b&gt; when the restaurant is
        modified. It\'s awesome, isn\'t it? Also you will be able to &lt;b&gt;create reviews&lt;/b&gt; for the
        restaurants, menus and the different items &lt;b&gt;including put a score&lt;/b&gt; in the review. A
        registered user also have a &lt;b&gt;screen to change some important configurations&lt;/b&gt;. &lt;b&gt;Register for
        free&lt;/b&gt; and enjoy with all the new features.</string>
    <string name="minDistance" translatable="false">2</string>
    <string name="hint_default_distance_preference">Default 2Km</string>
    <string name="summary_default_distance_preference">Default minimum distance to restaurants</string>
    <string name="title_default_distance_preference">Minimum distance</string>
    <string name="show_price" translatable="false">%.1f€</string>
    <string name="custom_restaurants">Custom restaurants</string>
    <string name="showing_all">No results. Showing all</string>

</resources>
