<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/manage_menus"
            android:icon="@drawable/ic_menu"
            android:title="@string/action_manage_menus"
            android:checked="true"/>
        <item
            android:id="@+id/manage_items"
            android:icon="@drawable/ic_item"
            android:title="@string/action_manage_items" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />
    </group>

</menu>
